added refential Path

--- a/read_jsons.ipynb
+++ b/read_jsons.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, json\n",
     "import pandas as pd\n",
     "    \n",
-    "\n",
+    "# this is for appending the path header\n",
+    "path_header = r'CORD-19-research-challenge/2020-03-13/'\n",
+    "    \n",
     "# this finds our json files\n",
-    "path_to_json = r'biorxiv_medrxiv\\biorxiv_medrxiv'\n",
-    "path_to_json_2 = r\"comm_use_subset\\comm_use_subset\"\n",
-    "path_to_json_3 = r\"noncomm_use_subset\\noncomm_use_subset\"\n",
-    "path_to_json_4 = r\"pmc_custom_license\\pmc_custom_license\"\n",
+    "path_to_json = path_header + r'biorxiv_medrxiv/biorxiv_medrxiv'\n",
+    "path_to_json_2 = path_header + r\"comm_use_subset/comm_use_subset\"\n",
+    "path_to_json_3 = path_header + r\"noncomm_use_subset/noncomm_use_subset\"\n",
+    "path_to_json_4 = path_header + r\"pmc_custom_license/pmc_custom_license\"\n",
     "\n",
     "\n",
     "list_of_jsons= [path_to_json, path_to_json_2, path_to_json_3,path_to_json_4]\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,81 +98,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0015023cc06b5362d332b3baf348d11567ca2fbb</td>\n",
-       "      <td>The RNA pseudoknots in foot-and-mouth disease ...</td>\n",
-       "      <td>[{'text': 'word count: 194 22 Text word count:...</td>\n",
-       "      <td>[{'text': 'VP3, and VP0 (which is further proc...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>a22ceac8d5e1cfaf2e79557d3c794458d0e1cdbe</td>\n",
+       "      <td>23 of the 2019-nCoV sequence</td>\n",
+       "      <td>[{'text': 'In numerous instances, tracking the...</td>\n",
+       "      <td>[{'text': '33 Meta-metagenomic searches allow ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>004f0f8bb66cf446678dc13cf2701feec4f36d76</td>\n",
-       "      <td>Healthcare-resource-adjusted vulnerabilities t...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'text': 'The 2019-nCoV epidemic has spread a...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>107f0d5a47f48f85d6645cac0e7008edc4d9d8cd</td>\n",
+       "      <td>Quantitative Delineation of Herpesviruses in B...</td>\n",
+       "      <td>[{'text': 'Public health concerns about recent...</td>\n",
+       "      <td>[{'text': 'Public health concerns associated w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>00d16927588fb04d4be0e6b269fc02f0d3c2aa7b</td>\n",
-       "      <td>Real-time, MinION-based, amplicon sequencing f...</td>\n",
-       "      <td>[{'text': 'Infectious bronchitis (IB) causes s...</td>\n",
-       "      <td>[{'text': 'Infectious bronchitis (IB), which i...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>681c5099b2afb08fe5cb2f58d92e9c6e4873bec2</td>\n",
+       "      <td>Geometric coupling of helicoidal ramps and cur...</td>\n",
+       "      <td>[{'text': 'Cellular membranes display an incre...</td>\n",
+       "      <td>[{'text': 'Recent advances in microscopy, segm...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>013d9d1cba8a54d5d3718c229b812d7cf91b6c89</td>\n",
-       "      <td>Assessing spread risk of Wuhan novel coronavir...</td>\n",
-       "      <td>[{'text': 'Background: A novel coronavirus (20...</td>\n",
-       "      <td>[{'text': 'In December 2019, a cluster of pati...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>e4f66cfdaf836895e7d37941223f11ebc41dbb57</td>\n",
+       "      <td>PLANT-Dx: A Molecular Diagnostic for Point of ...</td>\n",
+       "      <td>[{'text': 'Synthetic biology based diagnostic ...</td>\n",
+       "      <td>[{'text': 'Synthetic biology has recently cont...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>01d162d7fae6aaba8e6e60e563ef4c2fca7b0e18</td>\n",
-       "      <td>TWIRLS, an automated topic-wise inference meth...</td>\n",
-       "      <td>[{'text': 'Faced with the current large-scale ...</td>\n",
-       "      <td>[{'text': 'The sudden outbreak of the new coro...</td>\n",
+       "      <th>4</th>\n",
+       "      <td>e350e1b4aab99c73d0e0d03121b50c059c04fd61</td>\n",
+       "      <td>Novel Immunoglobulin Domain Proteins Provide I...</td>\n",
+       "      <td>[{'text': 'A novel coronavirus (SARS-CoV-2) is...</td>\n",
+       "      <td>[{'text': 'Nidoviruses are an ancient group of...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13197</td>\n",
-       "      <td>ff365ebbc0fc55476886b0abd129e227c1f8a527</td>\n",
-       "      <td>Article focus Hip</td>\n",
-       "      <td>[{'text': 'We report a systematic review and m...</td>\n",
-       "      <td>[{'text': 'Despite the fact that total hip art...</td>\n",
+       "      <th>13197</th>\n",
+       "      <td>e29e17f37924d1d14edf56276a5dcca87851e62f</td>\n",
+       "      <td>HIV-1 Frameshift RNA-Targeted Triazoles Inhibi...</td>\n",
+       "      <td>[{'text': 'The HIV-1 frameshift-stimulating (F...</td>\n",
+       "      <td>[{'text': 'T here is a rapidly expanding recog...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13198</td>\n",
-       "      <td>ff7d49ac4008f60ef9c5a437e0d504dcefd1246f</td>\n",
+       "      <th>13198</th>\n",
+       "      <td>6999b89c08c8a72fc0e86e78e4fd67666516a63a</td>\n",
        "      <td></td>\n",
+       "      <td>[{'text': 'Nosocomial infections are a major w...</td>\n",
+       "      <td>[{'text': 'Nosocomial infections (NIs) are a m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13199</th>\n",
+       "      <td>16b0744424f02e01fe2f01b3ea03e2862f1359fc</td>\n",
+       "      <td>Reference sequence (RefSeq) database at NCBI: ...</td>\n",
+       "      <td>[{'text': 'The RefSeq project at the National ...</td>\n",
+       "      <td>[{'text': 'For the past 15 years the National ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13200</th>\n",
+       "      <td>2d102f7db396b4358f23cab728f3af3d8871c39c</td>\n",
+       "      <td>Protective Behavior and West Nile Virus Risk</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[{'text': 'results of studies conducted in oth...</td>\n",
+       "      <td>[{'text': 'We conducted a cross-sectional, hou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13199</td>\n",
-       "      <td>ffb381668d93248759ca3855425e05722cb9f562</td>\n",
-       "      <td></td>\n",
+       "      <th>13201</th>\n",
+       "      <td>664563d8f7858aa1fe412414d4728b9243930e5a</td>\n",
+       "      <td>Respiratory Infection in Institutions during E...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[{'text': 'H uman coronaviruses (HCoVs) were f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13200</td>\n",
-       "      <td>ffd3a93b927e221ded4cf76536ad31bef2c74b89</td>\n",
-       "      <td>Fatal Respiratory Infections Associated with R...</td>\n",
-       "      <td>[{'text': 'During an outbreak of severe acute ...</td>\n",
-       "      <td>[{'text': 'During an outbreak of severe acute ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13201</td>\n",
-       "      <td>ffe133ed880d6c77ae340c5374817232e21f8315</td>\n",
-       "      <td>Rational Design of Peptide Vaccines Against Mu...</td>\n",
-       "      <td>[{'text': 'Human papillomavirus (HPV) occurs i...</td>\n",
-       "      <td>[{'text': 'Certain types of cancers such as li...</td>\n",
+       "      <td>[{'text': 'large numbers of residents create a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,61 +181,61 @@
       ],
       "text/plain": [
        "                                             id  \\\n",
-       "0      0015023cc06b5362d332b3baf348d11567ca2fbb   \n",
-       "1      004f0f8bb66cf446678dc13cf2701feec4f36d76   \n",
-       "2      00d16927588fb04d4be0e6b269fc02f0d3c2aa7b   \n",
-       "3      013d9d1cba8a54d5d3718c229b812d7cf91b6c89   \n",
-       "4      01d162d7fae6aaba8e6e60e563ef4c2fca7b0e18   \n",
+       "0      a22ceac8d5e1cfaf2e79557d3c794458d0e1cdbe   \n",
+       "1      107f0d5a47f48f85d6645cac0e7008edc4d9d8cd   \n",
+       "2      681c5099b2afb08fe5cb2f58d92e9c6e4873bec2   \n",
+       "3      e4f66cfdaf836895e7d37941223f11ebc41dbb57   \n",
+       "4      e350e1b4aab99c73d0e0d03121b50c059c04fd61   \n",
        "...                                         ...   \n",
-       "13197  ff365ebbc0fc55476886b0abd129e227c1f8a527   \n",
-       "13198  ff7d49ac4008f60ef9c5a437e0d504dcefd1246f   \n",
-       "13199  ffb381668d93248759ca3855425e05722cb9f562   \n",
-       "13200  ffd3a93b927e221ded4cf76536ad31bef2c74b89   \n",
-       "13201  ffe133ed880d6c77ae340c5374817232e21f8315   \n",
+       "13197  e29e17f37924d1d14edf56276a5dcca87851e62f   \n",
+       "13198  6999b89c08c8a72fc0e86e78e4fd67666516a63a   \n",
+       "13199  16b0744424f02e01fe2f01b3ea03e2862f1359fc   \n",
+       "13200  2d102f7db396b4358f23cab728f3af3d8871c39c   \n",
+       "13201  664563d8f7858aa1fe412414d4728b9243930e5a   \n",
        "\n",
        "                                                   title  \\\n",
-       "0      The RNA pseudoknots in foot-and-mouth disease ...   \n",
-       "1      Healthcare-resource-adjusted vulnerabilities t...   \n",
-       "2      Real-time, MinION-based, amplicon sequencing f...   \n",
-       "3      Assessing spread risk of Wuhan novel coronavir...   \n",
-       "4      TWIRLS, an automated topic-wise inference meth...   \n",
+       "0                           23 of the 2019-nCoV sequence   \n",
+       "1      Quantitative Delineation of Herpesviruses in B...   \n",
+       "2      Geometric coupling of helicoidal ramps and cur...   \n",
+       "3      PLANT-Dx: A Molecular Diagnostic for Point of ...   \n",
+       "4      Novel Immunoglobulin Domain Proteins Provide I...   \n",
        "...                                                  ...   \n",
-       "13197                                  Article focus Hip   \n",
+       "13197  HIV-1 Frameshift RNA-Targeted Triazoles Inhibi...   \n",
        "13198                                                      \n",
-       "13199                                                      \n",
-       "13200  Fatal Respiratory Infections Associated with R...   \n",
-       "13201  Rational Design of Peptide Vaccines Against Mu...   \n",
+       "13199  Reference sequence (RefSeq) database at NCBI: ...   \n",
+       "13200       Protective Behavior and West Nile Virus Risk   \n",
+       "13201  Respiratory Infection in Institutions during E...   \n",
        "\n",
        "                                          paper_abstract  \\\n",
-       "0      [{'text': 'word count: 194 22 Text word count:...   \n",
-       "1                                                     []   \n",
-       "2      [{'text': 'Infectious bronchitis (IB) causes s...   \n",
-       "3      [{'text': 'Background: A novel coronavirus (20...   \n",
-       "4      [{'text': 'Faced with the current large-scale ...   \n",
+       "0      [{'text': 'In numerous instances, tracking the...   \n",
+       "1      [{'text': 'Public health concerns about recent...   \n",
+       "2      [{'text': 'Cellular membranes display an incre...   \n",
+       "3      [{'text': 'Synthetic biology based diagnostic ...   \n",
+       "4      [{'text': 'A novel coronavirus (SARS-CoV-2) is...   \n",
        "...                                                  ...   \n",
-       "13197  [{'text': 'We report a systematic review and m...   \n",
-       "13198                                                 []   \n",
-       "13199                                                 []   \n",
-       "13200  [{'text': 'During an outbreak of severe acute ...   \n",
-       "13201  [{'text': 'Human papillomavirus (HPV) occurs i...   \n",
+       "13197  [{'text': 'The HIV-1 frameshift-stimulating (F...   \n",
+       "13198  [{'text': 'Nosocomial infections are a major w...   \n",
+       "13199  [{'text': 'The RefSeq project at the National ...   \n",
+       "13200                                                 []   \n",
+       "13201                                                 []   \n",
        "\n",
        "                                              paper_body  \n",
-       "0      [{'text': 'VP3, and VP0 (which is further proc...  \n",
-       "1      [{'text': 'The 2019-nCoV epidemic has spread a...  \n",
-       "2      [{'text': 'Infectious bronchitis (IB), which i...  \n",
-       "3      [{'text': 'In December 2019, a cluster of pati...  \n",
-       "4      [{'text': 'The sudden outbreak of the new coro...  \n",
+       "0      [{'text': '33 Meta-metagenomic searches allow ...  \n",
+       "1      [{'text': 'Public health concerns associated w...  \n",
+       "2      [{'text': 'Recent advances in microscopy, segm...  \n",
+       "3      [{'text': 'Synthetic biology has recently cont...  \n",
+       "4      [{'text': 'Nidoviruses are an ancient group of...  \n",
        "...                                                  ...  \n",
-       "13197  [{'text': 'Despite the fact that total hip art...  \n",
-       "13198  [{'text': 'results of studies conducted in oth...  \n",
-       "13199  [{'text': 'H uman coronaviruses (HCoVs) were f...  \n",
-       "13200  [{'text': 'During an outbreak of severe acute ...  \n",
-       "13201  [{'text': 'Certain types of cancers such as li...  \n",
+       "13197  [{'text': 'T here is a rapidly expanding recog...  \n",
+       "13198  [{'text': 'Nosocomial infections (NIs) are a m...  \n",
+       "13199  [{'text': 'For the past 15 years the National ...  \n",
+       "13200  [{'text': 'We conducted a cross-sectional, hou...  \n",
+       "13201  [{'text': 'large numbers of residents create a...  \n",
        "\n",
        "[13202 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,9 +314,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
