added the initial stub for annotating text through the NLU container

--- a/read_jsons.ipynb
+++ b/read_jsons.ipynb
@@ -246,13 +246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "title_1 = jsons_data.loc[1:1]['title'][1]\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantitative Delineation of Herpesviruses in Bats for use in Ecological Studies\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(title_1))"
    ]
   },
   {
@@ -260,14 +277,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Quantitative Delineation of Herpesviruses in Bats for use in Ecological Studies\n"
+   ]
   },
   {
    "cell_type": "code",
