added working multiprocessing for annotating titles, and cell to write the un- and annotated jsons

--- a/analyze_doc.ipynb
+++ b/analyze_doc.ipynb
@@ -25,7 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copied from: https://www.geeksforgeeks.org/get-post-requests-using-python/\n",
+    "def analyzeText(text):\n",
+    "    import requests \n",
+    "    # defining the api-endpoint \n",
+    "    API_ENDPOINT = 'http://nlu:8080/factextraction/analyze'\n",
+    "    headers = {\"accept\": \"application/json\", \"content-type\": \"application/json\"}\n",
+    "    # data to be sent to api \n",
+    "    data = r'{\"docId\": \"doc2\", \"text\":\"' + str(text) + r'\", \"extractConcepts\": \"true\", \"language\": \"en\" }'\n",
+    "    # sending post request and saving response as response object \n",
+    "    r = requests.post(url = API_ENDPOINT, data = data, headers = headers) \n",
+    "    return r.text\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -34,15 +55,14 @@
        "'{\"docId\":\"doc2\",\"language\":\"en\",\"matches\":[{\"charLength\":7,\"charOffset\":0,\"text\":\"Plastic\",\"entity\":{\"id\":\"http://www.wikidata.org/entity/Q11474\",\"confidence\":0.775866761312668}},{\"charLength\":6,\"charOffset\":9,\"text\":\"Copper\",\"entity\":{\"id\":\"http://www.wikidata.org/entity/Q753\",\"confidence\":0.8870102642876663}},{\"charLength\":5,\"charOffset\":20,\"text\":\"metal\",\"entity\":{\"id\":\"http://www.wikidata.org/entity/Q11426\",\"confidence\":0.5593303515943758}},{\"charLength\":9,\"charOffset\":30,\"text\":\"materials\",\"entity\":{\"id\":\"http://www.wikidata.org/entity/Q16829513\",\"confidence\":0.212667514858712}},{\"charLength\":7,\"charOffset\":46,\"text\":\"viruses\",\"entity\":{\"id\":\"http://www.wikidata.org/entity/Q808\",\"confidence\":0.5377329609395741}}],\"facts\":[{\"subject\":{\"text\":\"Plastic Copper and metal\",\"charOffset\":0,\"charLength\":25},\"relation\":{\"text\":\"are\",\"charOffset\":26,\"charLength\":3},\"object\":{\"text\":\"materials\",\"charOffset\":30,\"charLength\":9}},{\"subject\":{\"text\":\"Some viruses\",\"charOffset\":41,\"charLength\":12},\"relation\":{\"text\":\"may stick\",\"charOffset\":54,\"charLength\":9},\"object\":{\"text\":\"on it\",\"charOffset\":64,\"charLength\":5}}],\"entities\":[{\"id\":\"http://www.wikidata.org/entity/Q753\",\"name\":\"Copper\",\"url\":\"http://en.wikipedia.org/wiki/Copper\",\"type\":\"CONCEPT\",\"salience\":0.0},{\"id\":\"http://www.wikidata.org/entity/Q11474\",\"name\":\"Plastic\",\"url\":\"http://en.wikipedia.org/wiki/Plastic\",\"type\":\"CONCEPT\",\"salience\":0.0},{\"id\":\"http://www.wikidata.org/entity/Q16829513\",\"name\":\"Werkstoff\",\"url\":\"http://de.wikipedia.org/wiki/Werkstoff\",\"type\":\"CONCEPT\",\"salience\":0.0},{\"id\":\"http://www.wikidata.org/entity/Q11426\",\"name\":\"Metal\",\"url\":\"http://en.wikipedia.org/wiki/Metal\",\"type\":\"CONCEPT\",\"salience\":0.0},{\"id\":\"http://www.wikidata.org/entity/Q808\",\"name\":\"Virus\",\"url\":\"http://en.wikipedia.org/wiki/Virus\",\"type\":\"CONCEPT\",\"salience\":0.0}]}'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# extracting response text \n",
-    "response_text = r.text \n",
-    "response_text"
+    "returnText = analyzeText(\"Plastic, Copper and metal are materials. Some viruses may stick on it.\")\n",
+    "returnText"
    ]
   },
   {
