--- a/read_jsons.ipynb
+++ b/read_jsons.ipynb
@@ -283,10 +283,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_jsons(path_header = r'CORD-19-research-challenge/2020-03-13/'):\n",
+    "    import os, json\n",
+    "    import pandas as pd\n",
+    "\n",
+    "    # this finds our json files\n",
+    "    path_to_json = path_header + r'biorxiv_medrxiv/biorxiv_medrxiv'\n",
+    "    path_to_json_2 = path_header + r\"comm_use_subset/comm_use_subset\"\n",
+    "    path_to_json_3 = path_header + r\"noncomm_use_subset/noncomm_use_subset\"\n",
+    "    path_to_json_4 = path_header + r\"pmc_custom_license/pmc_custom_license\"\n",
+    "\n",
+    "\n",
+    "    list_of_jsons= [path_to_json, path_to_json_2, path_to_json_3,path_to_json_4]\n",
+    "\n",
+    "    json_files = []\n",
+    "\n",
+    "    for i in list_of_jsons:\n",
+    "        json_files.extend([os.path.join(i,pos_json) for pos_json in os.listdir(i) if pos_json.endswith('.json')])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #json_files = [pos_json for pos_json in os.listdir(path_to_json) if pos_json.endswith('.json')]\n",
+    "\n",
+    "\n",
+    "    # here I define my pandas Dataframe with the columns I want to get from the json\n",
+    "    jsons_data = pd.DataFrame(columns=['id', \"title\", \"paper_abstract\",\"paper_body\"])\n",
+    "\n",
+    "    # we need both the json and an index number so use enumerate()\n",
+    "\n",
+    "    for index, js in enumerate(json_files):\n",
+    "        with open(js) as json_file:\n",
+    "            json_text = json.load(json_file)\n",
+    "            #print(json_text)\n",
+    "            # here you need to know the layout of your json and each json has to have\n",
+    "            # the same structure (obviously not the structure I have here)\n",
+    "            title = json_text['metadata']['title']\n",
+    "\n",
+    "            paper_id = json_text[\"paper_id\"]\n",
+    "\n",
+    "            #reduces the list only if there is content\n",
+    "            if json_text[\"abstract\"] != []:\n",
+    "                paper_abstract = (json_text[\"abstract\"])\n",
+    "            else:\n",
+    "                paper_abstract = (json_text[\"abstract\"])\n",
+    "\n",
+    "            #paper_abstract = (json_text[\"abstract\"])\n",
+    "            paper_body = (json_text[\"body_text\"])\n",
+    "            #print(title)\n",
+    "            # here I push a list of data into a pandas DataFrame at row given by 'index'\n",
+    "            jsons_data.loc[index] = [paper_id, title, paper_abstract, paper_body]\n",
+    "\n",
+    "    return jsons_data\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
