adding some timeout and rerun

--- a/Parsing_and_lookup.ipynb
+++ b/Parsing_and_lookup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,11 +14,11 @@
       "Requirement already satisfied: pandas in /opt/conda/lib/python3.7/site-packages (1.0.2)\n",
       "Requirement already satisfied: rdflib in /opt/conda/lib/python3.7/site-packages (4.2.2)\n",
       "Requirement already satisfied: SPARQLWrapper in /opt/conda/lib/python3.7/site-packages (1.8.5)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /opt/conda/lib/python3.7/site-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /opt/conda/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /opt/conda/lib/python3.7/site-packages (from pandas) (1.18.1)\n",
-      "Requirement already satisfied: isodate in /opt/conda/lib/python3.7/site-packages (from rdflib) (0.6.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /opt/conda/lib/python3.7/site-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: pyparsing in /opt/conda/lib/python3.7/site-packages (from rdflib) (2.4.6)\n",
+      "Requirement already satisfied: isodate in /opt/conda/lib/python3.7/site-packages (from rdflib) (0.6.0)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n"
      ]
     }
@@ -273,17 +273,20 @@
    "outputs": [],
    "source": [
     "from unidecode import unidecode\n",
-    "\n",
-    "# compile a regex that matches only alphanumeric plus the _\n",
     "import re\n",
-    "pattern = re.compile('\\W')\n",
     "\n",
+    "# wait for 15 minutes to finish with the annotation otherwise stop\n",
+    "timeout = 15 * 60\n",
     "\n",
     "def remove_non_ascii(text):\n",
-    "    return str(re.sub(pattern, ' ', text)).encode(\"ascii\", errors=\"ignore\").decode()\n",
+    "    # replace all non_ascii and non information characters\n",
+    "    ascii_text = str(text).encode(\"ascii\", errors=\"ignore\").decode()\n",
+    "    cleansed_text = re.sub(r'([^A-Za-z0-9\\+\\-\\.\\?\\!\\%,;()\\[\\] \\>\\<\\|])', ' ', ascii_text)\n",
+    "    return cleansed_text\n",
     "\n",
     "def analyze_text(text):\n",
     "    import requests \n",
+    "    global timeout\n",
     "    # do some cleansing of this text    \n",
     "    # defining the api-endpoint \n",
     "    API_ENDPOINT = 'http://nlu:8080/factextraction/analyze'\n",
@@ -292,7 +295,11 @@
     "    #print(\"Text sent to ambiverse is: \", remove_non_ascii(text))\n",
     "    data = r'{\"docId\": \"doc2\", \"text\":\"' + remove_non_ascii(text) + r'\", \"extractConcepts\": \"true\", \"language\": \"en\" }'\n",
     "    # sending post request and saving response as response object \n",
-    "    r = requests.post(url = API_ENDPOINT, data = data, headers = headers) \n",
+    "    try:\n",
+    "        r = requests.post(url = API_ENDPOINT, data = data, headers = headers, timeout=timeout) \n",
+    "    except:\n",
+    "        #print(\"ran in timeout\")\n",
+    "        return \"timeout of \" + str(timeout) + \" seconds reached\"\n",
     "    #print(\"returned text is: \", r.text)\n",
     "    return r.text\n"
    ]
@@ -375,23 +382,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# do it first for the abstracts only\n",
-    "abstracts_only = combined_data[combined_data.has_full_text != True]\n",
-    "abstracts_annotated = parallelized_apply(abstracts_only, runAnnotate, numProcs = 12) \n",
-    "abstracts_annotated.to_csv('abstracts_annotated.csv', index=True)"
+    "#abstracts_only = combined_data[combined_data.has_full_text != True]\n",
+    "#abstracts_annotated = parallelized_apply(abstracts_only, runAnnotate, numProcs = 12) \n",
+    "#abstracts_annotated.to_csv('abstracts_annotated.csv', index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "abstracts_annotated"
+    "#abstracts_annotated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13219, 20)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " combined_data[combined_data.has_full_text == True].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count    1.321900e+04\n",
+       "mean     3.064789e+04\n",
+       "std      3.247029e+04\n",
+       "min      8.600000e+01\n",
+       "25%      1.882200e+04\n",
+       "50%      2.732000e+04\n",
+       "75%      3.831100e+04\n",
+       "max      1.681081e+06\n",
+       "Name: catchall_length, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unfortunately we have quite data skew inside... \n",
+    "# there are very few enormously long documents\n",
+    "test_data = combined_data[combined_data.has_full_text == True]\n",
+    "\n",
+    "test_data['catchall_length'] = test_data['catchall'].apply(len)\n",
+    "test_data['catchall_length'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#full_texts_only = combined_data[(combined_data.has_full_text == True) & (combined_data.catchall.astype(str).str.len() < 40000)][0:100]\n",
+    "#full_texts_only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "64"
    ]
   },
   {
@@ -403,18 +505,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/472 [00:00<?, ?it/s]"
+      "  1%|          | 2/348 [05:10<14:54:29, 155.11s/it]"
      ]
     }
    ],
    "source": [
     "# then for the fulltexts on a E32s v3 with 32 vCPUs and 256 GB of memory, we need around 50GB for the DB,\n",
     "# then we have around 100GB for NLU which should give us enough parallelism for 28 threads with large documents \n",
-    "# and enough spare for python and the OS\n",
+    "# and enough spare for python and the OS --> We will run 38 Processes in parallel, others should be queued. On 28 Processes we saw only around 20 active\n",
     "\n",
-    "# do the first 100 for a test\n",
-    "full_texts_only = combined_data[combined_data.has_full_text == True]\n",
-    "full_texts_annotated = parallelized_apply(full_texts_only, runAnnotate, numProcs = 28)\n",
+    "# do the first 1000 for a test\n",
+    "full_texts_only = combined_data[(combined_data.has_full_text == True)]# & (combined_data.catchall.astype(str).str.len() < 40000)][0:1000]\n",
+    "full_texts_annotated = parallelized_apply(full_texts_only, runAnnotate, numProcs = 38)\n",
     "full_texts_annotated.to_csv('full_texts_annotated.csv', index=True)"
    ]
   },
@@ -424,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_texts_annotated"
+    "full_texts_annotated[54:55]"
    ]
   },
   {
